--- a/Week 1/sectie 2/opdracht 2/Opdracht 2.HTML
+++ b/Week 1/sectie 2/opdracht 2/Opdracht 2.HTML
@@ -4,7 +4,7 @@
 <title>Super Coole Foto</title>
 </head>
 <body>
-<img src="kaas" alt="Foto niet gevonden"
+<img src="kaas" alt="Foto niet gevonden">
     
     
 </body>
